# insights-bot-telegram-rs

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml
.github/: PULL_REQUEST_TEMPLATE.md
locales/: en.yml  zh-Hans.yml  zh-Hant.yml
migrations/postgres/: 0001_init.sql  0002_recap_config_extensions.sql
migrations/sqlite/: 0001_init.sql  0002_recap_config_extensions.sql
src/: config.rs  i18n.rs  lib.rs  main.rs  telemetry.rs
src/bot/: commands.rs  context.rs  middleware.rs  mod.rs  router.rs
src/bot/handlers/: migration.rs  mod.rs  recap.rs  recap_forwarded.rs  subscribe.rs  system.rs
src/db/: chat_history.rs  logs.rs  migration.rs  mod.rs  models.rs  recap_config.rs
src/http/: health.rs
src/services/: autorecap.rs  media.rs  mod.rs  openai.rs  prompts.rs  rate_limit.rs  recap.rs  telegraph.rs
tests/: config_tests.rs  i18n_tests.rs  rate_limit_tests.rs  recap_scope_tests.rs
