[package]
name = "insights-bot-telegram-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
async-openai = { version = "0.28", default-features = false, features = ["rustls-webpki-roots"] }
chrono = { version = "0.4", features = ["serde", "clock"] }
dotenvy = "0.15"
governor = { version = "0.6", features = ["dashmap"] }
scraper = "0.19"
axum = { version = "0.7", features = ["macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sqlx = { version = "0.7", default-features = false, features = [
    "runtime-tokio-rustls",
    "any",
    "postgres",
    "sqlite",
    "macros",
    "chrono",
    "uuid",
    "json",
] }
teloxide = { version = "0.12", features = ["macros", "ctrlc_handler", "rustls"] }
tokio = { version = "1.40", features = ["rt-multi-thread", "macros", "signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "registry"] }
uuid = { version = "1", features = ["v4", "serde"] }
nonzero_ext = "0.3"
